<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ultimos_historicos"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_arduino_ultimos"
            android:icon="@drawable/ultimos_historicos"
            android:title="@string/menu_arduino_ult" />

    </group>
    <group android:checkableBehavior="single">

            <item
                android:id="@+id/nav_consulta_historicos"
                android:icon="@drawable/consulta_historicos"
                android:title="@string/menu_historicos" />

            <item
                android:id="@+id/nav_consulta_arduino"
                android:icon="@drawable/consulta_historicos"
                android:title="@string/menu_arduino" />

    </group>
    <item android:title="Informacion">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info_24dp"
                android:title="@string/menu_info" />

            <item
                android:id="@+id/nav_acerca_de"
                android:icon="@drawable/ic_info_24dp"
                android:title="Acerca de" />
        </menu>
    </item>
</menu>
