<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.cardenas.jesus.proyectofinal.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_go_to_search"
            app:destination="@id/nav_home_add" />

    </fragment>
    <fragment
        android:id="@+id/nav_home_add"
        android:name="com.cardenas.jesus.proyectofinal.ui.search.SearchFragment"
        android:label="@string/add_estacion"
        tools:layout="@layout/fragment_search">

        <action
            android:id="@+id/action_go_to_HomeFragment"
            app:destination="@id/nav_home" />

    </fragment>

    <fragment
        android:id="@+id/nav_consulta_historicos"
        android:name="com.cardenas.jesus.proyectofinal.ui.consultas.ConsultaFragment"
        android:label="@string/menu_historicos"
        tools:layout="@layout/fragment_consulta">
        <action
            android:id="@+id/action_go_graphFragment"
            app:destination="@id/graph"
            />
        <argument
            android:name="consultaArduino"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>

    <fragment
        android:id="@+id/nav_arduino_ultimos"
        android:name="com.cardenas.jesus.proyectofinal.ui.ultimosNuestros.UltimosArduinoFragment"
        android:label="@string/menu_arduino_ult"
        tools:layout="@layout/fragment_ultimos_arduino"/>

    <fragment
        android:id="@+id/nav_consulta_arduino"
        android:name="com.cardenas.jesus.proyectofinal.ui.consultas.ConsultaFragment"
        android:label="@string/menu_arduino"
        tools:layout="@layout/fragment_consulta">
        <action
            android:id="@+id/action_go_graphFragment"
            app:destination="@id/graph"
            />
        <argument
            android:name="consultaArduino"
            app:argType="boolean"
            android:defaultValue="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_disp_movil"
        android:name="com.cardenas.jesus.proyectofinal.ui.maps.DispMovilMapsFragment"
        android:label="@string/menu_arduino"
        tools:layout="@layout/fragment_disp_movil_maps"/>

    <fragment
        android:id="@+id/graph"
        android:name="com.cardenas.jesus.proyectofinal.ui.grafica.GraphFragment"
        android:label="Grafica"
        tools:layout="@layout/fragment_graph" >
        <argument
            android:name="consultaArduino"
            app:argType="boolean"
            android:defaultValue="false" />
        <argument
            android:name="fechaInicial"
            app:argType="string"
            android:defaultValue="2020-04-01" />
        <argument
            android:name="fechaFinal"
            app:argType="string"
            android:defaultValue="2020-04-15" />

    </fragment>
</navigation>